test_regress/t/t_pp_defparen_bad.out
%Error: t/t_pp_defparen_bad.v:10:2: Illegal text before '(' that starts define arguments
   10 |  ( 1,2)
      |  ^
%Error: t/t_pp_defparen_bad.v:10:1: syntax error, unexpected '('
   10 | ((val  1) + (2))
      | ^
%Error: Exiting due to
